--- a/layouts/header.html
+++ b/layouts/header.html
@@ -1,3 +1,10 @@
-<header>
-  
+<header class="w-100 bg-white d-flex justify-content-between align-items-center position-fixed top-0 px-4 shadow-sm" style="height: 50px; z-index: 9999;">
+  <div class="d-flex align-items-center">
+    <img src="assets/logo.png" alt="Logo" height="25">
+    <h1 class="fs-5 m-0 ms-2">StudentConnect</h1>
+  </div>
+  <button class="btn fw-bold text-dark">
+    ID
+    <svg fill="#000000" height="64px" width="64px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 330 330" xml:space="preserve" stroke="#000000" stroke-width="30.690000000000005"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="#CCCCCC" stroke-width="0.66"></g><g id="SVGRepo_iconCarrier"> <path id="XMLID_225_" d="M325.607,79.393c-5.857-5.857-15.355-5.858-21.213,0.001l-139.39,139.393L25.607,79.393 c-5.857-5.857-15.355-5.858-21.213,0.001c-5.858,5.858-5.858,15.355,0,21.213l150.004,150c2.813,2.813,6.628,4.393,10.606,4.393 s7.794-1.581,10.606-4.394l149.996-150C331.465,94.749,331.465,85.251,325.607,79.393z"></path> </g></svg>
+  </button>
 </header>
