--- a/layouts/header.html
+++ b/layouts/header.html
@@ -1,4 +1,7 @@
 <header class="w-100 bg-white d-flex justify-content-between align-items-center position-fixed top-0 px-4 shadow-sm" style="height: 50px; z-index: 9999;">
+  <a href="#" class="burger-btn d-block d-xl-none">
+    <i class="bi bi-justify fs-3"></i>
+  </a>
   <div class="d-flex align-items-center">
     <img src="assets/logo.png" alt="Logo" height="25">
     <h1 class="fs-5 m-0 ms-2">StudentConnect</h1>
